--- a/menu-item-list-customer.html
+++ b/menu-item-list-customer.html
@@ -18,7 +18,7 @@
             <a href="cart.html" style="text-align: left;"><b>Cart</b></a>
           </li>
           <li style="float: right;">
-            <a href="customer-logout.js" style="text-align: right;">LogOut</a>
+            <a href="js/customer-logout.js" style="text-align: right;">LogOut</a>
           </li>
         </ul>
       </div>
