--- a/menu-item-list-admin.html
+++ b/menu-item-list-admin.html
@@ -14,7 +14,7 @@
             >
           </li>
           <li style="float: right;">
-            <a href="admin-logout.js" style="text-align: right;">LogOut</a>
+            <a href="js/admin-logout.js" style="text-align: right;">LogOut</a>
           </li>
         </ul>
       </div>
