--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
             >
           </li>
           <li style="float: right;">
-            <a href="customer-logout.js" style="text-align: right;">LogOut</a>
+            <a href="js/customer-logout.js" style="text-align: right;">LogOut</a>
           </li>
         </ul>
       </div>
